configuration proyect port, path and creation controlers, services, domain and others

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#nos permite gestionar la configuracion que va a tener nuestro proyecto, configuracion de puerto o context path de configuracion
+#Tambien podemos agregar nuestras propias añair nuestras propias variables o atributos para la confuguración
+#lo mas importante es la capacidad de gestionar los diferentes perfiles qu tenemos en nuestro proyecto
+#un perfil que se ejecute en tiempo de desarrollo
+#o un perfil para el modo de producción
 
+#URL all context modify spring
+#https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
+
+server.port=8090
+server.servlet.context-path=/utchapp/api
