rename packages and new construction classes java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8098
+spring.jpa.hibernate.ddl-auto = update
 
 #Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/utchapp
-spring.datasource.username=deliverst
-spring.datasource.password=Root.1234
+spring.datasource.username=postgres
+spring.datasource.password=doremifasollasido
 spring.jpa.show-sql=true
