--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8098
 spring.jpa.hibernate.ddl-auto = update
 
 #Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/utchapp
-spring.datasource.username=postgres
-spring.datasource.password=doremifasollasido
+spring.datasource.url=jdbc:postgresql://localhost:5432/utchapp3
+spring.datasource.username=deliverst
+spring.datasource.password=Root.1234
 spring.jpa.show-sql=true
