add notes in app.pro context

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,31 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/utchapp3
 spring.datasource.username=deliverst
 spring.datasource.password=Root.1234
 spring.jpa.show-sql=true
+
+
+/*
+Nos permite gestionar la configuracion que va a tener nuestro proyecto, configuracion de puerto o context path de configuracion
+Tambien podemos agregar nuestras propias añair nuestras propias variables o atributos para la confuguración
+lo mas importante es la capacidad de gestionar los diferentes perfiles qu tenemos en nuestro proyecto
+un perfil que se ejecute en tiempo de desarrollo
+o un perfil para el modo de producción
+
+URL all context modify spring
+https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
+
+¿Qué es JPA?12
+es una especificacion de java para un framework ORM mapeo objeto relacional es una serie de regalas que quiere interactual con la base de datos con java tenga que seguir, unos ejemplos como hibernet, toplink, eclipselink jpa utiliza anotaciones para conectar tabla con la base de datos, y asi no usarlo de manera nativa, y lo hacemos con el lenguaje java
+JPA es una especificación de JAVA hacia los frameworks ORM. Se basa en anotaciones, estre las que se encuentran:
+
+@Entity para indicar que una clase java representa una tabla en la base de datos
+@Table recible el nombre de la tabla
+@Column se le pone a los atributos de la clase y se usa cuando los nombres entre la tabla y la entidad no coinciden
+@Id y @EmbededId representan la clave primaria, id para clave primaria sencilla y llave privada compuesta
+@GeneratedValue genera valores automaticos para las llaves de las tablas
+@OneToMany @ManyToOne permite representar relaciones tambien en nuestras clases
+
+Conocer qué es Spring Data
+No es un aimplementacion de jpa, jpa lo usa, y es mucho mas poderosa y llena de posbilidades, spring data, contiene varios suproyectos,como springdata jbs jpa mongodb y casandra. spring data ya tiene para hacer CRUD, y sin resporistoris sin codigo que nos permiten hacer cualqueir CRUD sin esribir una sola linea de codigo.
+Tambien nos probee de autoritorias transparentes, spring data nos permite saber cuando se hzo algo en la base de datos, y todo esto sin tener que hacer nada
+
+*/
